[package]
name = "any-cache"
version = "0.2.3"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Cache with freely typed keys and any associated value"
keywords = ["any", "cache"]

homepage = "https://github.com/phaazon/any-cache"
repository = "https://github.com/phaazon/any-cache"
documentation = "https://docs.rs/any-cache"
readme = "README.md"

include = ["src/**/*", "Cargo.toml", "CHANGELOG.md", "README.md"]

[dependencies]
